examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__print_statements_with_redirection@print >> a, "b", "c".snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            PrintStatement(
                PrintStatement {
                    argument: [
                        PrimaryExpression(
                            String(
                                String {
                                    children: [
                                        StringStart(
                                            StringStart {
                                                [RANGE]
                                            },
                                        ),
                                        StringContent(
                                            StringContent {
                                                children: [],
                                                [RANGE]
                                            },
                                        ),
                                        StringEnd(
                                            StringEnd {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    [RANGE]
                                },
                            ),
                        ),
                        PrimaryExpression(
                            String(
                                String {
                                    children: [
                                        StringStart(
                                            StringStart {
                                                [RANGE]
                                            },
                                        ),
                                        StringContent(
                                            StringContent {
                                                children: [],
                                                [RANGE]
                                            },
                                        ),
                                        StringEnd(
                                            StringEnd {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    children: Some(
                        Chevron {
                            children: PrimaryExpression(
                                Identifier(
                                    Identifier {
                                        [RANGE]
                                    },
                                ),
                            ),
                            [RANGE]
                        },
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
