examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__raise_statements@raise RunTimeError('NO') from e.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            RaiseStatement(
                RaiseStatement {
                    cause: Some(
                        PrimaryExpression(
                            Identifier(
                                Identifier {
                                    [RANGE]
                                },
                            ),
                        ),
                    ),
                    children: Some(
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            String(
                                                                String {
                                                                    children: [
                                                                        StringStart(
                                                                            StringStart {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        StringContent(
                                                                            StringContent {
                                                                                children: [],
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        StringEnd(
                                                                            StringEnd {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
