examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__raise_statements@raise.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            RaiseStatement(
                RaiseStatement {
                    cause: None,
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
