examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__return_statements@return_a.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ReturnStatement(
                ReturnStatement {
                    children: Some(
                        Expression(
                            PrimaryExpression(
                                Identifier(
                                    Identifier {
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
