examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__try_statements@try  aexcept b  cexcept d as e  fexcept g h  iexcept  j.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            TryStatement(
                TryStatement {
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    children: [
                        ExceptClause(
                            ExceptClause {
                                value: Some(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                                alias: None,
                                children: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                        ExceptClause(
                            ExceptClause {
                                value: Some(
                                    AsPattern(
                                        AsPattern {
                                            alias: Some(
                                                AsPatternTarget {
                                                    [RANGE]
                                                },
                                            ),
                                            children: [
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                ),
                                alias: None,
                                children: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                        ExceptClause(
                            ExceptClause {
                                value: Some(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                                alias: Some(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                                children: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                        ExceptClause(
                            ExceptClause {
                                value: None,
                                alias: None,
                                children: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
